--- a/BridgePracticeLobby/pom.xml
+++ b/BridgePracticeLobby/pom.xml
@@ -20,7 +20,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.5</version>
                 <configuration>
-                    <outputDirectory>C:\Users\owend\OneDrive\Desktop\bps\lobby\plugins</outputDirectory>
+                    <outputDirectory>/Users/sharondlevin/mc-server/lobby/plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
