--- a/BridgePracticeLobby/src/main/resources/plugin.yml
+++ b/BridgePracticeLobby/src/main/resources/plugin.yml
@@ -19,5 +19,5 @@ commands:
     permission-message: §cYou must have a rank to use this command!
   telestick:
     description: Get a stick that makes you teleport!
-    #permission: bridgepractice.command.telestick
-    #permission-message: §cYou must have a rank to use this command!
+    permission: bridgepractice.command.telestick
+    permission-message: §cYou must have a rank to use this command!
