--- a/BridgePracticeLobby/pom.xml
+++ b/BridgePracticeLobby/pom.xml
@@ -20,7 +20,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.5</version>
                 <configuration>
-                    <outputDirectory>/Users/sharondlevin/mc-server/lobby/plugins</outputDirectory>
+                    <outputDirectory>/Users/woodywillis/bp/bp-server-config/lobby/plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
@@ -54,6 +54,12 @@
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
             <version>4.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.luckperms</groupId>
+            <artifactId>api</artifactId>
+            <version>5.3</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
