--- a/BridgePracticeLobby/src/main/resources/plugin.yml
+++ b/BridgePracticeLobby/src/main/resources/plugin.yml
@@ -17,7 +17,7 @@ commands:
     description: Gives you the cookie gadget. Have a bite!
     permission: bridgepractice.command.cookie
     permission-message: §cYou must have a rank to use this command!
-  announcement:
+  joinannounce:
     description: Toggle join announcements in chat!
     permission: bridgepractice.announce
     usage: <command> [on/off]
