BPC: Improve /rainbow permission error message

--- a/BridgePracticeClub/src/main/resources/plugin.yml
+++ b/BridgePracticeClub/src/main/resources/plugin.yml
@@ -62,4 +62,4 @@ commands:
   rainbow:
     description: Makes your text rainbow! Only available to certain ranked players
     permission: bridgepractice.command.rainbow
-    permission-message: §cYou must have a rank to use this command
+    permission-message: §cYou must have a godlike rank or higher to use this command!
