--- a/SkywarsPractice/SkywarsPracticeMain/pom.xml
+++ b/SkywarsPractice/SkywarsPracticeMain/pom.xml
@@ -51,5 +51,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.27</version>
         </dependency>
+        <dependency>
+            <groupId>net.bridgepractice</groupId>
+            <artifactId>RavenAntiCheat</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
