Fixed typo + fixed permission

--- a/BridgePracticeLobby/src/main/resources/plugin.yml
+++ b/BridgePracticeLobby/src/main/resources/plugin.yml
@@ -31,9 +31,9 @@ commands:
     permission-message: §cYou must have a godlike rank or higher to use this command!
   playerrider:
     description: Get a leash that lets you ride other players
-    permission: bridgepractice.command.playerrider
+    permission: group.custom
     permission-message: §cYou must have a custom rank or higher to use this command!
   grantenderbutt:
-    description: Get a pearl that you can ride (BETA)
-    permission: group.mod
-    permission-message: §cYou must have a mod rank or higher to use this command!
+    description: Get a pearl that you can ride 
+    permission: group.admin
+    permission-message: §cYou must have admin rank or higher to use this command!
