BPL: Add PlayerRider and EnderButt gadget (#24)
* BridgePracticeLobby: Added PlayerRider and EnderButt gadget

* Fixed typo + fixed permission

* Remoed accidental import

* Changed

* Changed var names

* Removed autoformatter changes

* Renamed Enderbutt command

* Renamed enderbutt command

* Renamed class

* Fixed slight issues

* Fixed typo

* Added things that were removed

* Changed createEnderbutt method to giveGadget

* Removed createEnderbutt method

* Update BridgePracticeLobby/src/main/java/net/bridgepractice/BridgePracticeLobby/EnderbuttCommand.java

Co-authored-by: BuildTools <unconfigured@null.spigotmc.org>
Co-authored-by: UltimatePro-Grammer <63370104+UltimatePro-Grammer@users.noreply.github.com>

--- a/BridgePracticeLobby/src/main/resources/plugin.yml
+++ b/BridgePracticeLobby/src/main/resources/plugin.yml
@@ -29,3 +29,11 @@ commands:
     description: Get a stick that makes you teleport!
     permission: bridgepractice.command.telestick
     permission-message: §cYou must have a godlike rank or higher to use this command!
+  playerrider:
+    description: Get a leash that lets you ride other players
+    permission: group.custom
+    permission-message: §cYou must have a custom rank or higher to use this command!
+  enderbutt:
+    description: Get a pearl that you can ride 
+    permission: group.legend
+    permission-message: §cYou must have legend rank or higher to use this command!
