--- a/BridgePracticeLobby/src/main/resources/plugin.yml
+++ b/BridgePracticeLobby/src/main/resources/plugin.yml
@@ -37,3 +37,8 @@ commands:
     description: Get a pearl that you can ride 
     permission: group.legend
     permission-message: §cYou must have legend rank or higher to use this command!
+  coins:
+    description: Staff only command
+    permission: group.mod
+    permission-message: §cYou don't have permission to execute this command
+
