--- a/BridgePracticeClub/pom.xml
+++ b/BridgePracticeClub/pom.xml
@@ -18,9 +18,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.5</version>
+                <version>3.2.2</version>
                 <configuration>
-                    <outputDirectory>F:\BridgePractice Server\BridgePractice Local Test Server\singleplayer\plugins</outputDirectory>
+                    <outputDirectory>/Users/sharondlevin/mc-server/singleplayer/plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
@@ -53,13 +53,13 @@
         <dependency>
             <groupId>net.luckperms</groupId>
             <artifactId>api</artifactId>
-            <version>5.3</version>
+            <version>5.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
-            <version>4.6.0</version>
+            <version>4.8.0</version>
         </dependency>
         <dependency>
             <groupId>net.bridgepractice</groupId>
@@ -70,11 +70,6 @@
             <groupId>net.bridgepractice</groupId>
             <artifactId>BPShowRanksInNametag</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>23.0.0</version>
         </dependency>
     </dependencies>
 
