--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,27 @@
 RavenAntiCheat/
 .DS_Store
-target/
-BridgePracticeClub/out/
-BridgePracticeClub/club/
 .idea/
+target/
 __pycache__/
+
+# xml files
 BPBridge/pom.xml
 BPBungee/pom.xml
+BPEmergency/pom.xml
 BPNick/pom.xml
 BPReport/pom.xml
 BPShowRanks/pom.xml
 BPShowRanksInNametag/pom.xml
+BridgePracticeClub/pom.xml
 BridgePracticeLobby/pom.xml
 
+# iml files
+BPBridge/BPBridge.iml
+BPBungee/BPBungee.iml
+BPEmergency/BPEmergency.iml
+BPNick/BPNick.iml
+BPReport/BPReport.iml
+BPShowRanks/BPShowRanks.iml
+BPShowRanksInNametag/BPShowRanksInNametag.iml
+BridgePracticeClub/BridgePracticeClub.iml
+BridgePracticeLobby/BridgePracticeLobby.iml
