--- a/BridgePracticeLobby/src/main/resources/plugin.yml
+++ b/BridgePracticeLobby/src/main/resources/plugin.yml
@@ -41,4 +41,8 @@ commands:
     description: Staff only command
     permission: group.mod
     permission-message: §cYou don't have permission to execute this command
+  fly:
+    description: Toggle fly
+    permission: group.godlike
+    permission-message: §cYou don't have permission to execute this command
 
