BPBungee and BPBridge: Add tourneys

--- a/BPBungee/src/main/resources/plugin.yml
+++ b/BPBungee/src/main/resources/plugin.yml
@@ -138,3 +138,8 @@ commands:
 
   changetag:
     description: Change your [CUSTOM] tag
+
+  jointourneygame:
+    description: Join a tournament game!
+  verify:
+    description: Link your Discord and your Minecraft account!
